<resources>
    <string name="app_name">GsonPractice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gson_parser">Gson Parser</string>
    <string name="nome">Nome</string>
    <string name="gsno_tojson">Gson().toJson()</string>
    <string name="gson_fromjson">Gson().fromJson()</string>
    <string name="info">Info</string>
    <string name="json">JSON</string>
</resources>